First Cover Card Push
Front page content update 1

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 
 </head>
 <body>
+
 <div class="container">
-<h1>Hi, I'm Logan.</h1>
-<p>This is my personal site.</p>
+    <h1>Hi, I'm <a href="http://www.linkedin.com/in/logangraham">Logan.</a></h1>
+    <h2>I'm a <u>student</u>, <u>entrepreneur</u>, and aspiring <u>data scientist</u>.</h2>
+    <h2>I like tackling really big social problems by combining different fields like biomedical, economics, and data science.</h2>
 </div>
 <!-- TO COME:: 
 
