New layout & information

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,19 +9,18 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Awesomeitis</title>
+    <title>Logan Graham | Entrepreneur, Academic, and Leader</title>
+    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/github-custom.css">
+	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/github.css">
+	<style>
+		body {
+			min-width: 200px;
+			max-width: 790px;
+			margin: 0 auto;
+			padding: 30px;
+		}
+	</style>
 
-    <!-- Bootstrap core CSS -->
-    <link rel='stylesheet' type='text/css' href="http://fonts.googleapis.com/css?family=Raleway">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/custom.css">
 
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
@@ -36,10 +36,24 @@
 </head>
 <body>
 
-<div class="container">
+<article class="markdown-body">
+    <img class="headshot" src="assets/img/headshot.jpg">
+
+
     <h1>Hi, I'm <a href="http://www.linkedin.com/in/logangraham">Logan.</a></h1>
-    <h2>I'm a <u>student</u>, <u>entrepreneur</u>, and aspiring <u>data scientist</u>.</h2>
-    <h2>I like tackling really big social problems by combining different fields like biomedical, economics, and data science.</h2>
+    <p>I'm a student, entrepreneur, and aspiring data scientist. I like tackling really big social problems. I'm currently at Oxford University as a Rhodes Scholar.</p>
+    <p>Recently, I've been building <a href="http://www.awakelabs.com">Reveal</a>, <a href="http://www.yunusandyouth.com">Yunus&Youth</a>, and <a href="http://www.awesomeitis.com">Awesomeitis</a>, all of which I founded </p>
+    <p>I've done research in Auction Theory & Labour Economics. I'm a DJ, salsa dance amateur, and lover of China.<p>
+    <p>One day I want to see a world where:
+        <ul>
+            <li>Patients are just as powerful as doctors </li>
+            <li>Market forces solve the water crisis</li>
+            <li>We all live off the grid</li>
+        </ul>
+    <p>
+    <br><br>
+    <p style="float: right; color: #434343;">Email me at <b>logancgraham [at] gmail.com</b></p>
+    <!-- </div> -->
 </div>
 <!-- TO COME:: 
 
