Make image clickable

--- a/index2.html
+++ b/index2.html
@@ -37,12 +37,12 @@
 <body>
 
 <article class="markdown-body">
-    <a href="http://www.logangraham.me"><img class="headshot" src="assets/img/headshot.jpg"></a>
+    <img class="headshot" src="assets/img/headshot.jpg">
 
 
     <h1>Hi, I'm <a href="http://www.linkedin.com/in/logangraham">Logan.</a></h1>
     <p>I'm a student, entrepreneur, and aspiring data scientist. I like tackling really big social problems. I'm currently at Oxford University as a Rhodes Scholar.</p>
-    <p>Recently, I've been building <a href="http://www.awakelabs.com">Reveal</a>, <a href="http://www.yunusandyouth.com">Yunus&Youth</a>, and <a href="http://www.awesomeitis.com">Awesomeitis</a>, all of which I founded or co-founded.</p>
+    <p>Recently, I've been building <a href="http://www.awakelabs.com">Reveal</a>, <a href="http://www.yunusandyouth.com">Yunus&Youth</a>, and <a href="http://www.awesomeitis.com">Awesomeitis</a>, all of which I founded.</p>
     <p>I've done research in Auction Theory & Labour Economics. I'm a DJ, salsa dance amateur, and lover of China.<p>
     <p>One day I want to see a world where:
         <ul>
@@ -52,7 +52,7 @@
         </ul>
     <p>
     <br><br>
-    <p style="float: right; color: #999999;"><small>Email me at logancgraham [at] gmail.com</small></p>
+    <p style="float: right; color: #939393;">Email me at <b>logancgraham [at] gmail.com</b></p>
     <!-- </div> -->
 </div>
 <!-- TO COME:: 
