CSS and Content Changes

--- a/index.html
+++ b/index.html
@@ -9,23 +9,30 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Logan Graham | Entrepreneur, Academic, and Leader</title>
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/github-custom.css">
+    <title>Logan Graham</title>
+
+    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/github.css">
+    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/github-custom.css">
 	<style>
 		body {
 			min-width: 200px;
-			max-width: 790px;
+			max-width: 700px;
 			margin: 0 auto;
 			padding: 30px;
 		}
 	</style>
 
+    <script> $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
+    </script>
 
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <!-- <script src="../../assets/js/ie-emulation-modes-warning.js"></script> -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -36,23 +43,24 @@
 </head>
 <body>
 
+
+
 <article class="markdown-body">
-    <a href="http://www.logangraham.me"><img class="headshot" src="assets/img/headshot.jpg"></a>
+    <a href="http://www.logangraham.me"><img class="headshot-center" src="assets/img/headshot.jpg"></a>
 
-
-    <h1>Hi, I'm <a href="http://www.linkedin.com/in/logangraham">Logan.</a></h1>
-    <p>I'm a student, entrepreneur, and aspiring data scientist. I like tackling really big social problems. I'm currently at Oxford University as a Rhodes Scholar.</p>
-    <p>Recently, I've been building <a href="http://www.awakelabs.com">Reveal</a>, <a href="http://www.yunusandyouth.com">Yunus&Youth</a>, and <a href="http://www.awesomeitis.com">Awesomeitis</a>, all of which I founded or co-founded.</p>
-    <p>I've done research in Auction Theory & Labour Economics. I'm a DJ, salsa dance amateur, and lover of China.<p>
+    <h1>Hi, I'm <a href="http://www.linkedin.com/in/logangraham" style="text-align:center">Logan.</a></h1>    
+    <p>I'm a social entrepreneur, student, and aspiring data scientist.</p>
+    <p>What keeps me up at night is figuring out how to apply economic & data-driven approaches to big social problems – health, poverty, security. I'm currently at the University of Oxford as a Rhodes Scholar.</p>
+    <p>Recently, I've been building <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top"><strong>Reveal</strong></a>, <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top"><strong>Yunus&Youth</strong></a>, and <a href="http://www.awesomeitis.com" title="An online patient-to-patient mentoring platform, starting with Arthritis" data-toggle="tooltip" data-placement="top"><strong>Awesomeitis</strong></a>, all of which I founded or co-founded.</p>
+    <p>I've done research in Computational Auction/Game Theory & Labour Economics. I'm madly in love with the economics way of thinking as a force for discovery and dissection. I'm a DJ, amateur salsa dancer, and admirer of China.</p>
     <p>One day I want to see a world where:
         <ul>
             <li>Patients are just as powerful as doctors </li>
             <li>Market forces solve the water crisis</li>
             <li>We all live off the grid</li>
         </ul>
-    <p>
-    <br><br>
-    <p style="float: right; color: #999999;"><small>Email me at logancgraham [at] gmail.com</small></p>
+    </p>
+    <p style="float: right; color: #b0b0b0;"><small>Email me at logancgraham [at] gmail.com</small></p>
     <!-- </div> -->
 </div>
 <!-- TO COME:: 
@@ -90,8 +98,13 @@ Public speaking
 
 -->
 
-
 </body>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="assets/bootstrap/js/tooltip.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="http://code.jquery.com/jquery.js"></script>
 </html>
 
 
