Cleaning up files

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
 
 <article class="markdown-body">
-    <a href="http://www.logangraham.me"><img class="headshot-center" src="assets/img/headshot.jpg"></a>
+    <img class="headshot-center" href="http://www.logangraham.me" src="assets/img/headshot.jpg">
 
     <h1>Hi, I'm <a href="http://www.linkedin.com/in/logangraham" style="text-align:center">Logan.</a></h1>    
     <p>I'm a social entrepreneur, student, and aspiring data scientist.</p>
-    <p>What keeps me up at night is figuring out how to apply economic & data-driven approaches to big social problems – health, poverty, security. I'm currently at the University of Oxford as a Rhodes Scholar.</p>
+    <p>What keeps me up at night is figuring out how to apply economic & data-driven approaches to big social problems – health, poverty, security. In September I'll start at the University of Oxford as a Rhodes Scholar.</p>
     <p>Recently, I've been building <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top"><strong>Reveal</strong></a>, <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top"><strong>Yunus&Youth</strong></a>, and <a href="http://www.awesomeitis.com" title="An online patient-to-patient mentoring platform, starting with Arthritis" data-toggle="tooltip" data-placement="top"><strong>Awesomeitis</strong></a>, all of which I founded or co-founded.</p>
     <p>I've done research in Computational Auction/Game Theory & Labour Economics. I'm madly in love with the economics way of thinking as a force for discovery and dissection. I'm a DJ, amateur salsa dancer, and admirer of China.</p>
     <p>One day I want to see a world where:
@@ -63,41 +63,6 @@
     <p style="float: right; color: #b0b0b0;"><small>Email me at logancgraham [at] gmail.com</small></p>
     <!-- </div> -->
 </div>
-<!-- TO COME:: 
-
-[ INTRO ]
-1. One sentence philosophy
-2. Rhodes Scholar
-3. What I'm doing now
-4. What really fascinates me
-
-
-[ LINKS ]
-LI
-Twitter
-Github
-
-[ PROJECTS ]
-Yunus & Youth
-Reveal
-Awesomeitis
-
-[ INTERESTS ]
-Social problems
-Data science & computational economics
-Chinese economy
-
-[ OTHERS ]
-DJing
-Salsa Dancing
-
-[ SKILLS ]
-Python
-R
-Public speaking
-
--->
-
 </body>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
