--- a/treasurehunt.html
+++ b/treasurehunt.html
@@ -60,10 +60,10 @@
 <article class="markdown-body">
     <img class="headshot-center" href="http://www.logangraham.me" src="assets/img/naaaazavenya.jpg">
 
-    <h1>Hi,<a href="http://www.linkedin.com/in/lerlyluo" style="text-align:center">Lerly.</a></h1>
+    <h1>Hi,<a href="http://www.linkedin.com/in/lerlyluo" style="text-align:center"> Lerly.</a></h1>
     <p>I've returned.</p>
     <p>Can I hear your voice?</p>
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+    <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
   dānɡ rán
 </button>
 
