--- a/treasurehunt.html
+++ b/treasurehunt.html
@@ -76,7 +76,7 @@
           <h4 class="modal-title" id="myModalLabel">Here's what you have to do</h4>
         </div>
         <div class="modal-body">
-          Call me.
+          Skype me. My phone took a dive.
         </div>
       </div>
     </div>
