--- a/treasurehunt.html
+++ b/treasurehunt.html
@@ -61,27 +61,10 @@
     <img class="headshot-center" href="http://www.logangraham.me" src="assets/img/naaaazavenya.jpg">
 
     <h1>Hi,<a href="http://www.linkedin.com/in/lerlyluo" style="text-align:center"> Lerly.</a></h1>
-    <p>I've returned.</p>
-    <p>Can I hear your voice?</p>
-    <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
-  dānɡ rán
+    <button a href = "https://www.youtube.com/watch?v=hlSbSKNk9f0" type="button" class="btn btn-primary btn-sm">
+  click here
 </button>
 
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Here's what you have to do</h4>
-        </div>
-        <div class="modal-body">
-          Skype me. My phone took a dive.
-        </div>
-      </div>
-    </div>
-  </div>
-    <!-- </div> -->
 </div>
 </body>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
