--- a/treasurehunt.html
+++ b/treasurehunt.html
@@ -61,9 +61,9 @@
     <img class="headshot-center" href="http://www.logangraham.me" src="assets/img/naaaazavenya.jpg">
 
     <h1>Hi,<a href="http://www.linkedin.com/in/lerlyluo" style="text-align:center"> Lerly.</a></h1>
-    <button a href = "https://www.youtube.com/watch?v=hlSbSKNk9f0" type="button" class="btn btn-primary btn-sm">
-  click here
-</button>
+    <a href = "https://www.youtube.com/watch?v=hlSbSKNk9f0" button class="btn btn-primary btn-sm">
+  click me
+</a>
 
 </div>
 </body>
