Add blog link to homepage

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <li>We all live off the grid</li>
         </ul>
     </p>
+    <p> <a href="/blog/"><strong>You can read (some of) my thoughts here!</strong></a></p>
     <p style="float: right; color: #b0b0b0;"><small>Email me at logancgraham [at] gmail.com</small></p>
     <!-- </div> -->
 </div>
