Fixed list of interests

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <p>I've done research in Computational Auction/Game Theory & Labour Economics. I'm madly in love with the economics way of thinking as a force for discovery and dissection. I'm a DJ, amateur salsa dancer, and admirer of China (my Chinese name is 雷罗庚).</p>
     <p>One day I want to see a world where:
         <ul>
-            <li>Patients are just as powerful as doctors </li>
+            <li>With data, patients are just as powerful as doctors</li>
             <li>Market forces solve the water crisis</li>
-            <li>We all live off the grid</li>
+            <li>We live truly sustainably</li>
         </ul>
     </p>
     <p> <a href="/blog/"><strong>You can read (some of) my thoughts here!</strong></a></p>
