--- a/index.html
+++ b/index.html
@@ -13,34 +13,10 @@
 
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/github.css">
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/github-custom.css">
-    <style>
-        body {
-            min-width: 200px;
-            max-width: 700px;
-            margin: 0 auto;
-            padding: 30px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/custom.css">
 
     <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.2.0/respond.js"></script>
-
-<!--
-    <script> $(function () {
-      $('[data-toggle="tooltip"]').tooltip()
-    })
-    </script>
-
-    <script>
-        $(document).ready(function(){
-            $("#tooltip-ex a").tooltip({
-                placement : 'top'
-            });
-        });
-    </script>
--->
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -54,28 +30,53 @@
 
 </head>
 <body>
+  <div class="row main-content container">
+    <div class="container inner-content">
+      <div class="col-md-5 portfolio-item left-column">
+        <div class="center-on-small">
+          <img href="http://www.logangraham.me" src="assets/img/headshot.jpg" style="height: 150px; border-radius: 50%;"/></a>
+  	</div>
+
+        <div class="center-on-small">
+  	<p class="description">
+  	  Hi, I'm Logan.</p>
+
+    <p class="text-center groups-inner groups-text">
+            <a href="mailto:logancgraham@gmail.com" class="read-more"> Email</a> |
+            <a href="https://www.linkedin.com/in/logancgraham" class="read-more">LinkedIn</a> |
+            <a href="#" class="read-more">CV</a> </p>
+
+        </div>
+
+      <!-- <div class="groups">
+        <div class="groups-outer">
+        	<div class="groups-middle">
+        	  <p class="text-center groups-inner groups-text">
+            <a href="mailto:logancgraham@gmail.com" class="read-more"> Email Me</a> |
+            <a href="https://www.linkedin.com/in/logancgraham" class="read-more">LinkedIn</a> |
+            <a href="#" class="read-more">CV</a> </p>
+        	</div>
+        </div>
+      </div> -->
+    </div>
+
+    <div class="col-md-6 portfolio-item right-column">
+      <p class="info">
+        I'm an academic & entrepreneur. I'm currently a Rhodes Scholar at the University of Oxford completing a PhD in Engineering Science, within the Machine Learning Research Group. The <a href="/research">question I research</a> is: 30 years from now, how many of our jobs will be automated, why, and what new industries will automation create?
+      </p>
+
+      <p class="info">
+        I'm also an entrepreneur, salsa dancer, and rower. I launched <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>, a <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top">fellowship for social entrepreneurs</a>, and worked for a long time to help <a href="http://www.awesomeitis.com" title="An online patient-to-patient mentoring platform, starting with Arthritis" data-toggle="tooltip" data-placement="top">kids with Arthritis.</a>
+      </p>
+
+      <p class="info">
+        I sometimes write on topics like automation, AI, China (my Chinese name is 雷罗庚), biotech, leadership, science, personality, and ethics. <a href="/blog" class="read-more">You can read some of it here →</a>
+      </p>
+    </div>
 
 
-
-<article class="markdown-body">
-    <img class="headshot-center" href="http://www.logangraham.me" src="assets/img/headshot.jpg">
-
-    <h1>Hi, I'm <a href="http://www.linkedin.com/in/logangraham" style="text-align:center">Logan.</a></h1>
-    <p>I'm a social entrepreneur, student, and aspiring data scientist.</p>
-    <p>What keeps me up at night is figuring out how to apply economic & data-driven approaches to big social problems – health, poverty, security. In September I'll start at the University of Oxford as a Rhodes Scholar.</p>
-    <p>Recently, I've been building <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top"><strong>Reveal</strong></a>, <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top"><strong>Yunus&Youth</strong></a>, and <a href="http://www.awesomeitis.com" title="An online patient-to-patient mentoring platform, starting with Arthritis" data-toggle="tooltip" data-placement="top"><strong>Awesomeitis</strong></a>, all of which I founded or co-founded.</p>
-    <p>I've done research in Computational Auction/Game Theory & Labour Economics. I'm madly in love with the economics way of thinking as a force for discovery and dissection. I'm a DJ, amateur salsa dancer, and admirer of China (my Chinese name is 雷罗庚).</p>
-    <p>One day I want to see a world where:
-        <ul>
-            <li>With data, patients are just as powerful as doctors</li>
-            <li>Market forces solve the water crisis</li>
-            <li>We live truly sustainably</li>
-        </ul>
-    </p>
-    <p> <a href="/blog/"><strong>You can read (some of) my thoughts here!</strong></a></p>
-    <p style="float: right; color: #b0b0b0;"><small>Email me at logancgraham [at] gmail.com</small></p>
-    <!-- </div> -->
-</div>
+    </div>
+  </div>
 </body>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
