matched bg & text colors with blog

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container inner-content">
       <div class="col-md-5 portfolio-item left-column">
         <div class="center-on-small">
-          <img href="http://www.logangraham.me" src="assets/img/headshot.jpg" style="height: 150px; border-radius: 50%;"/></a>
+          <img href="http://www.logangraham.xyz" src="assets/img/logan_headshot.jpg" style="height: 150px; border-radius: 50%;"/></a>
   	</div>
 
         <div class="center-on-small">
