--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
       <p class="info">
         I sometimes write on topics like automation, AI, China (my Chinese name is 雷罗庚), biotech, leadership, science, personality, and ethics. <a href="/blog" class="read-more">You can read some of it here →</a>
       </p>
+
+      <p class="info">
+        Here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
+      </p>
     </div>
 
 
