update style and homepage

--- a/index.html
+++ b/index.html
@@ -51,25 +51,14 @@
 
         <div class="center-on-small">
   	<p class="description">
-  	  Hi, I'm Logan.</p>
+  	  Logan Graham</p>
 
     <p class="text-center groups-inner groups-text">
-            <a href="mailto:logancgraham@gmail.com" class="read-more"> Email</a> |
+            <a href="mailto:logan@robots.ox.ac.uk" class="read-more"> Email</a> |
             <a href="https://www.linkedin.com/in/logangraham" class="read-more">LinkedIn</a> |
             <a href="#" class="read-more">CV</a> </p>
 
         </div>
-
-      <!-- <div class="groups">
-        <div class="groups-outer">
-        	<div class="groups-middle">
-        	  <p class="text-center groups-inner groups-text">
-            <a href="mailto:logancgraham@gmail.com" class="read-more"> Email Me</a> |
-            <a href="https://www.linkedin.com/in/logancgraham" class="read-more">LinkedIn</a> |
-            <a href="#" class="read-more">CV</a> </p>
-        	</div>
-        </div>
-      </div> -->
     </div>
 
 
@@ -80,7 +69,7 @@
       </p>
 
       <p class = "info">
-        The <a href="http://logangraham.xyz/blog/What-I-Research">question I research</a> is: 30 years from now, how many of our jobs will be automated, why, and what new industries will automation create?
+        The <a href="http://logangraham.xyz/blog/What-I-Research">question I research</a> is: 30 years from now, how many of our jobs will be automated, why, and what new industries will automation create? I also look at how we can use machine learning to a) do automatic economic inference and b) find patterns and structure in data, especially causality.
       </p>
 
       <p class="info">
