accurate landing page

--- a/index.html
+++ b/index.html
@@ -65,11 +65,22 @@
 
     <div class="col-md-6 portfolio-item right-column">
       <p class="info">
-        I'm an academic & entrepreneur. I'm currently a Rhodes Scholar at the University of Oxford in the early stages of a PhD with the Machine Learning Research Group.
+         I'm currently a PhD student with the Machine Learning Research Group at the University of Oxford,
+         where I study as a Rhodes Scholar. I'm also a several-time entrepreneur. I believe in using
+         technology and business to solve the world's toughest challenges.
       </p>
 
       <p class = "info">
-        The <a href="http://logangraham.xyz/blog/What-I-Research">question I research</a> is: 30 years from now, how many of our jobs will be automated, why, and what new industries will automation create? I also look at how we can use machine learning to a) do automatic economic inference and b) find patterns and structure in data, especially causality.
+        I research how <b>machine learning and artificial intelligence</b> can do
+        better <b>economics.</b> Specifically: how can we use lots of data to
+        create models, discover causality, and make insightful predictions?
+
+      </p>
+
+      <p class = "info">
+        <a href="http://logangraham.xyz/blog/What-I-Research">I also research: </a>
+        30 years from now, how many of our jobs will be automated, why, and what new industries
+        will automation create?
       </p>
 
       <p class="info">
