Added RAIL to homepage

--- a/index.html
+++ b/index.html
@@ -84,7 +84,13 @@
       </p>
 
       <p class="info">
-        I'm also an entrepreneur, salsa dancer, and rower. I launched <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>, a <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top">fellowship for social entrepreneurs</a>, and worked for a long time to help <a href="http://www.awesomeitis.com" title="An online patient-to-patient mentoring platform, starting with Arthritis" data-toggle="tooltip" data-placement="top">kids with Arthritis.</a>
+        I'm also an entrepreneur, salsa dancer, and rower. I currently run
+        <a href="http://www.rhodeslab.com" title="We use AI to solve important, global social problems" data-toggle="tooltip" data-placement="top">RAIL, the Rhodes Artificial Intelligence Lab.</a> I launched
+        <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>,
+        a
+        <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top">fellowship for social entrepreneurs</a>,
+        and worked for a long time to help
+        <a href="http://www.awesomeitis.com" title="An online patient-to-patient mentoring platform, starting with Arthritis" data-toggle="tooltip" data-placement="top">kids with Arthritis.</a>
       </p>
 
       <p class="info">
