Added papers.html explainer text

--- a/papers.html
+++ b/papers.html
@@ -31,6 +31,10 @@
 </head>
 <body>
   <div class="row main-content container">
+    <p> I curate a weekly email of 10 or so highly interesting Machine Learning papers, and I send it to my lab.
+    I thought it'd be interesting to put the repository here.</p>
+    <hr>
+    <h3> Weekly Top ML Papers #27<h3>
     <table style="box-sizing:border-box;border-collapse:collapse;display:block;width:888px;overflow:auto;word-break:keep-all;color:rgb(51,51,51);font-family:&quot;Helvetica Neue&quot;,Helvetica,&quot;Segoe UI&quot;,Arial,freesans,sans-serif,&quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;,&quot;Segoe UI Symbol&quot;;font-size:16px;margin-top:0px;margin-bottom:0px">
       <thead style="box-sizing:border-box">
           <tr style="box-sizing:border-box;border-top:1px solid rgb(204,204,204)">
