--- a/papers.html
+++ b/papers.html
@@ -31,10 +31,26 @@
 </head>
 <body>
   <div class="row main-content container">
-    <p> I curate a weekly email of 10 or so highly interesting Machine Learning papers, and I send it to my lab.
-    I thought it'd be interesting to put the repository here.</p>
+    <p> I curate a weekly email of 10 or so highly interesting Machine Learning papers, and I send it to my lab. I thought it'd be interesting to put the repository here.</p>
     <hr>
-    <h3> Weekly Top ML Papers #27<h3>
+    <h3>#27: AI is Going to Kill Everyone Edition</h3>
+    <p> Apologies for the grave title. Three very intriguing things have happened in the past few weeks around AI safety, and I recommend you give them a look and think for yourself where you stand. In other news: another TensorFlow release, a new Distill publication, a cookbook with potential, and the Chinese government's AI strategy.</p>
+    <br>
+    <h4>Interesting News and Links</h4>
+    <ul>
+      <li><b>"Humankind's Last Invention Ever":</b> three initiatives were launched to promote the development of beneficial AI and prevent the development of severely harmful AI:
+        <ul> 
+          <li> The Future of Life Institute released <a href='https://www.youtube.com/watch?v=9CO6M2HsoIA'>Slaughterbots</a>, a short film associated with <a href='AutonomousWeapons.org'>AutonomousWeapons.org</a>, to reveal how plausible a militarised AI future is. Extremely engaging video – if you like Black Mirror, you'll enjoy this.</li>
+          <li> Canadian researchers called for the Canadian government to join an international ban on the weaponization of artificial intelligence. Canadian/Canadian-related? <a href='https://techlaw.uottawa.ca/bankillerai#letter'>You can sign the letter here.</a></li>
+          <li>On November 3rd, researchers launched the <a href='https://www.montrealdeclaration-responsibleai.com/context'>Montreal Declaration for a Responsible Development of Artificial Intelligence.</a> You can contribute your thoughts through contributing a brief or answering a survey.</li>
+        </ul>
+      </li>
+      <li><b>Getting deep on the phone:</b> Google released <a href='https://developers.googleblog.com/2017/11/announcing-tensorflow-lite.html'>TensorFlow Lite</a>, which can compile pre-trained TensorFlow models for Android and iOS, which should speed-up mobile deep learning applications.</li>
+      <li><b>Picture books for adults:</b> <a href='https://distill.pub/2017/feature-visualization/'>a great new Distill publication</a> explores how NN's "build up their understanding of images."</li>
+      <li><b>Cooking with ML:</b> if you follow/know of Ferenc Huszar (his blog is recommended), he's just put out <a href='http://www.inference.vc/design-patterns/'>a short note describing </a> to various types of learning barriers, which is short and nice as a refresher.</li>
+      <li><b>Central planning for AI:</b> the Chinese State Council released  "A Next Generation Artificial Intelligence Development Plan" back in July, which highlights 8 core technologies it aims to build worth the read – <a href='https://na-production.s3.amazonaws.com/documents/translation-fulltext-8.1.17.pdf'>see page 9 here.</a></li>
+    </ul>
+    <br>
     <table style="box-sizing:border-box;border-collapse:collapse;display:block;width:888px;overflow:auto;word-break:keep-all;color:rgb(51,51,51);font-family:&quot;Helvetica Neue&quot;,Helvetica,&quot;Segoe UI&quot;,Arial,freesans,sans-serif,&quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;,&quot;Segoe UI Symbol&quot;;font-size:16px;margin-top:0px;margin-bottom:0px">
       <thead style="box-sizing:border-box">
           <tr style="box-sizing:border-box;border-top:1px solid rgb(204,204,204)">
