New font family, link to papers page

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         I research how <b>machine learning and artificial intelligence</b> can do
         better <b>economics.</b> Specifically: how can we use lots of data to
         create models, discover causality, and make insightful predictions?
+        <a href='/papers'>I curate interesting papers here</a> – you might like them.
 
       </p>
 
