--- a/papers.html
+++ b/papers.html
@@ -30,7 +30,7 @@
 
 </head>
 <body>
-  <div class="row main-content container">
+  <div class="row main-content container" style='width: 60%;'>
     <p> I curate a weekly email of 10 or so highly interesting Machine Learning papers, and I send it to my lab. I thought it'd be interesting to put the repository here.</p>
     <hr>
     <h3>#27: AI is Going to Kill Everyone Edition</h3>
@@ -51,7 +51,7 @@
       <li><b>Central planning for AI:</b> the Chinese State Council released  "A Next Generation Artificial Intelligence Development Plan" back in July, which highlights 8 core technologies it aims to build worth the read – <a href='https://na-production.s3.amazonaws.com/documents/translation-fulltext-8.1.17.pdf'>see page 9 here.</a></li>
     </ul>
     <br>
-    <table style="box-sizing:border-box;border-collapse:collapse;display:block;width:888px;overflow:auto;word-break:keep-all;color:rgb(51,51,51);font-family:&quot;Helvetica Neue&quot;,Helvetica,&quot;Segoe UI&quot;,Arial,freesans,sans-serif,&quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;,&quot;Segoe UI Symbol&quot;;font-size:16px;margin-top:0px;margin-bottom:0px">
+    <table style="box-sizing:border-box;border-collapse:collapse;display:block;width:888px;overflow:auto;word-break:keep-all;color:rgb(51,51,51);font-size:16px;margin-top:0px;margin-bottom:0px">
       <thead style="box-sizing:border-box">
           <tr style="box-sizing:border-box;border-top:1px solid rgb(204,204,204)">
               <th style="box-sizing:border-box;padding:6px 13px;border:1px solid rgb(221,221,221)">
