Fixed link formatting

--- a/papers.html
+++ b/papers.html
@@ -33,7 +33,7 @@
   <div class="row main-content container" style='width: 60%;'>
     <p>I curate a weekly email of 10 or so highly interesting Machine Learning papers, and I send it to my lab. I thought it'd be interesting to put the repository here.</p>
     <br>
-    <p><b><a href='https://goo.gl/forms/O2hbzgwFbKoOJTaI3'>You can sign up for the email here.<p></b></p>
+    <p><b><a href='https://goo.gl/forms/O2hbzgwFbKoOJTaI3'>You can sign up for the email here.</a></b></p>
     <hr>
     <h3>#27: AI is Going to Kill Everyone Edition</h3>
     <p> Apologies for the grave title. Three very intriguing things have happened in the past few weeks around AI safety, and I recommend you give them a look and think for yourself where you stand. In other news: another TensorFlow release, a new Distill publication, a cookbook with potential, and the Chinese government's AI strategy.</p>
