--- a/index.html
+++ b/index.html
@@ -71,21 +71,22 @@
       </p>
 
       <p class = "info">
-        I research how <b>machine learning and artificial intelligence</b> can do
-        better <b>economics.</b> Specifically: how can we use lots of data to
-        create models, discover causality, and make insightful predictions?
+        I research how we can improve <b>machine learning</b> with tools from
+        causality and economics. I'm specifically interested in how we can
+        bring in experimentation, object-relation reasoning, and structural
+        equation modelling to create more efficient and generalizable intelligence.
         <a href='/papers'>I curate interesting papers here</a> – you might like them.
 
       </p>
 
       <p class = "info">
-        <a href="http://logangraham.xyz/blog/What-I-Research">I also research: </a>
+        I also research:
         30 years from now, how many of our jobs will be automated, why, and what new industries
         will automation create?
       </p>
 
       <p class="info">
-        I'm also an entrepreneur, salsa dancer, and rower. I currently run
+        I'm an entrepreneur, salsa dancer, and rower. I currently run
         <a href="http://www.rhodeslab.com" title="We use AI to solve important, global social problems" data-toggle="tooltip" data-placement="top">RAIL, the Rhodes Artificial Intelligence Lab.</a> I launched
         <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>,
         a
@@ -95,7 +96,7 @@
       </p>
 
       <p class="info">
-        I sometimes write on topics like automation, AI, China (my Chinese name is 雷罗庚), biotech, leadership, science, personality, and ethics. <a href="/blog" class="read-more">You can read some of it here →</a>
+        <a href="/blog" class="read-more">I write some things here →</a>
       </p>
 
       <p class="info">
