Word change on frontpage

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
       <p class = "info">
         I research how we can improve <b>machine learning</b> with tools from
-        causality and economics. I'm specifically interested in how we can
-        bring in experimentation, object-relation reasoning, and structural
+        <b>causality</b> and economics. I'm specifically interested in how we can
+        use experimentation, object-relation reasoning, and structural
         equation modelling to create more efficient and generalizable intelligence.
         <a href='/papers'>I curate interesting papers here</a> – you might like them.
 
