Fixed 33 title error

--- a/papers.html
+++ b/papers.html
@@ -39,7 +39,7 @@
         <p><b><a href='https://goo.gl/forms/O2hbzgwFbKoOJTaI3'>You can sign up for the email here.</a></b></p>
         <hr>
         <br>
-        <h3>#32: Speaking like humans, Evolving like humans, and Programming humans Edition</h3>
+        <h3>#33: What happened in 2017 edition</h3>
         <p>Happy New Year! Humankind has survived (barely?) another year without coming crashing down due to internet hyper-dependence, the robot uprising, nuclear war, or AGI-based extermination. There, start your 2018 off on a cheery note!</p>
         <h4>Interesting News and Links from the past 7 days (papers below)</h4>
         <ul>
