Added August monthly reading

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
       <p class="info">
         Here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
       </p>
+
+      <p class="info">
+        <b>Reading topic of the month:</b> Climate Change. Currently reading <em><a href="https://www.goodreads.com/book/show/26261327-climate-change">Climate Change: What Everyone Needs to Know</a></em> and <em><a href="https://www.goodreads.com/book/show/6597651-the-windup-girl">The Windup Girl</a></em>
+      </p>
     </div>
 
 
