--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@
 
       <p class = "info">
         I also research:
-        30 years from now, how many of our jobs will be automated, why, and what new industries
-        will automation create?
+        30 years from now, how many of our jobs will be automated, why, and what new industries will automation create?
       </p>
 
       <p class="info">
-        I'm an entrepreneur, salsa dancer, and rower. I currently run
+        I'm an entrepreneur, salsa dancer, and rower. I started and ran
         <a href="http://www.rhodeslab.com" title="We use AI to solve important, global social problems" data-toggle="tooltip" data-placement="top">RAIL, the Rhodes Artificial Intelligence Lab.</a> I launched
         <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>,
         a
@@ -104,7 +103,7 @@
       </p>
 
       <p class="info">
-        <b>Reading topic of the month:</b> Climate Change. Currently reading <em><a href="https://www.goodreads.com/book/show/26261327-climate-change">Climate Change: What Everyone Needs to Know</a></em> and <em><a href="https://www.goodreads.com/book/show/6597651-the-windup-girl">The Windup Girl</a></em>
+        <b>Reading topic of the month:</b> Economic Systems of the Far Future. Currently reading <em><a href="https://www.goodreads.com/book/show/17863.Accelerando">Accelerando</a></em> and <em><a href="https://www.goodreads.com/book/show/31283667-stubborn-attachments">Stubborn Attachments</a></em>
       </p>
     </div>
 
