Added new Nov. book

--- a/index.html
+++ b/index.html
@@ -103,7 +103,13 @@
       </p>
 
       <p class="info">
-        <b>Reading topic of the month:</b> Economic Systems of the Far Future. Currently reading <em><a href="https://www.goodreads.com/book/show/17863.Accelerando">Accelerando</a></em> and <em><a href="https://www.goodreads.com/book/show/31283667-stubborn-attachments">Stubborn Attachments</a></em>
+        <b>Reading topic of the month:</b> Economic Systems of the Far Future. 
+
+        Currently reading <em><a href="https://www.goodreads.com/book/show/17863.Accelerando">Accelerando</a></em>,
+
+        <em><a href="https://www.goodreads.com/book/show/39910326-economic-science-fictions">Economic Science Fictions</a></em>,
+
+        and <em><a href="https://www.goodreads.com/book/show/31283667-stubborn-attachments">Stubborn Attachments</a></em>
       </p>
     </div>
 
