--- a/index.html
+++ b/index.html
@@ -1,127 +1,100 @@
-
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
-
     <title>Logan Graham</title>
-
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/4.0.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/custom.css">
-
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.2.0/respond.js"></script>
-
     <!-- GOOGLE ANALYTICS-->
-
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
     ga('create', 'UA-51657413-3', 'auto');
     ga('send', 'pageview');
-  </script>
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <!-- <script src="../../assets/js/ie-emulation-modes-warning.js"></script> -->
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-<body>
-  <div class="row main-content container">
-    <div class="container inner-content">
-      <div class="col-md-5 portfolio-item left-column">
-        <div class="center-on-small">
-          <img href="http://www.logangraham.xyz" src="assets/img/logan_headshot.jpg" style="height: 150px; border-radius: 50%;"/></a>
-    </div>
-
-        <div class="center-on-small">
-    <p class="description">
-      Logan Graham</p>
-
-    <p class="text-center groups-inner groups-text">
-            <a href="mailto:logan@robots.ox.ac.uk" class="read-more"> Email</a> |
-            <a href="https://www.linkedin.com/in/logangraham" class="read-more">LinkedIn</a> |
-            <a href="http://www.logangraham.xyz/bio.html" class="read-more">Full Bio</a> </p>
-
+    </script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.2.0/respond.js"></script>
+    <script src="https://www.w3schools.com/lib/w3data.js"></script>
+  </head>
+  <body>
+    <div class='container-fluid main-content'>
+      <div w3-include-html="header_index.html"></div>
+        <div class="row main-content-inner">
+            <div class="col-md-5">
+              <div class="center-on-small">
+              <img href="http://www.logangraham.xyz" src="assets/img/logan_headshot.jpg" style="height: 150px; border-radius: 50%;"/></a>
+              </div>
+              <div class="center-on-small">
+                <p class="description">
+                Logan Graham</p>
+                <p class="text-center groups-inner groups-text">
+                  <a href="mailto:logan@robots.ox.ac.uk" class="read-more"> Email</a> |
+                  <a href="https://www.linkedin.com/in/logangraham" class="read-more">LinkedIn</a> |
+                  <a href="http://www.logangraham.xyz/bio.html" class="read-more">Full Bio</a> </p>
+              </div>
+            </div>
+            <div class="col-md-7">
+              <p>
+                I'm currently a PhD student with the Machine Learning Research Group at the University of Oxford,
+                where I study as a Rhodes Scholar. I'm also a several-time entrepreneur. I believe in using
+                technology and business to solve the world's toughest challenges.
+              </p>
+              <p>
+                I research how we can improve <b>machine learning</b> with tools from
+                <b>causality</b> and economics. I'm specifically interested in how we can
+                use experimentation, object-relation reasoning, and structural
+                equation modelling to create more efficient and generalizable intelligence.
+                <a href='/papers'>I curate interesting papers here</a> – you might like them.
+              </p>
+              <p>
+                I also research:
+                30 years from now, how many of our jobs will be automated, why, and what new industries will automation create?
+              </p>
+              <p>
+                I'm an entrepreneur, salsa dancer, and rower. I started and ran
+                <a href="http://www.rhodeslab.com" title="We use AI to solve important, global social problems" data-toggle="tooltip" data-placement="top">RAIL, the Rhodes Artificial Intelligence Lab.</a> I launched
+                <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>,
+                a
+                <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top">fellowship for social entrepreneurs</a>,
+                and worked for a long time to help
+                <a href="http://www.awesomeitis.com" title="An online patient-to-patient mentoring platform, starting with Arthritis" data-toggle="tooltip" data-placement="top">kids with Arthritis.</a>
+              </p>
+              <p>
+                <a href="/blog" class="read-more">I write some things here →</a>
+              </p>
+              <p>
+                Here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
+              </p>
+              <p>
+                <b>Reading topic of the month:</b> Economic Systems of the Far Future.
+                Currently reading <em><a href="https://www.goodreads.com/book/show/17863.Accelerando">Accelerando</a></em>,
+                <em><a href="https://www.goodreads.com/book/show/39910326-economic-science-fictions">Economic Science Fictions</a></em>,
+                and <em><a href="https://www.goodreads.com/book/show/31283667-stubborn-attachments">Stubborn Attachments</a></em>
+              </p>
+            </div>
+          </div>
         </div>
-    </div>
-
-
-
-    <div class="col-md-6 portfolio-item right-column">
-      <p class="info">
-         I'm currently a PhD student with the Machine Learning Research Group at the University of Oxford,
-         where I study as a Rhodes Scholar. I'm also a several-time entrepreneur. I believe in using
-         technology and business to solve the world's toughest challenges.
-      </p>
-
-      <p class = "info">
-        I research how we can improve <b>machine learning</b> with tools from
-        <b>causality</b> and economics. I'm specifically interested in how we can
-        use experimentation, object-relation reasoning, and structural
-        equation modelling to create more efficient and generalizable intelligence.
-        <a href='/papers'>I curate interesting papers here</a> – you might like them.
-
-      </p>
-
-      <p class = "info">
-        I also research:
-        30 years from now, how many of our jobs will be automated, why, and what new industries will automation create?
-      </p>
-
-      <p class="info">
-        I'm an entrepreneur, salsa dancer, and rower. I started and ran
-        <a href="http://www.rhodeslab.com" title="We use AI to solve important, global social problems" data-toggle="tooltip" data-placement="top">RAIL, the Rhodes Artificial Intelligence Lab.</a> I launched
-        <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>,
-        a
-        <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top">fellowship for social entrepreneurs</a>,
-        and worked for a long time to help
-        <a href="http://www.awesomeitis.com" title="An online patient-to-patient mentoring platform, starting with Arthritis" data-toggle="tooltip" data-placement="top">kids with Arthritis.</a>
-      </p>
-
-      <p class="info">
-        <a href="/blog" class="read-more">I write some things here →</a>
-      </p>
-
-      <p class="info">
-        Here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
-      </p>
-
-      <p class="info">
-        <b>Reading topic of the month:</b> Economic Systems of the Far Future. 
-
-        Currently reading <em><a href="https://www.goodreads.com/book/show/17863.Accelerando">Accelerando</a></em>,
-
-        <em><a href="https://www.goodreads.com/book/show/39910326-economic-science-fictions">Economic Science Fictions</a></em>,
-
-        and <em><a href="https://www.goodreads.com/book/show/31283667-stubborn-attachments">Stubborn Attachments</a></em>
-      </p>
-    </div>
-
-
-    </div>
-  </div>
-</body>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
-<script>
-    $('a').tooltip();
-</script>
+      </div>
+  </body>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
+  <script>
+  $('a').tooltip();
+  </script>
+  <script type="text/javascript">
+    w3IncludeHTML();
+  </script>
 </html>
